--- a/index.html
+++ b/index.html
@@ -21,9 +21,9 @@
   <div class="menu">
 
  
-<h1>&nbsp;&nbsp;MENU&nbsp;&nbsp;</h1>
+<p> MENU</p>
    <br>
-<li>TOP</li>
+   <div class="globalNav"><a href="https://heyanonakakobo.github.io/Top/"><li>TOP</li></a></div>
 <li>概要</li>
 
 <details>
@@ -50,7 +50,7 @@
 
 
 
-<br>
+
 
 <!--新製品入力欄-->
 
