--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
   <details>
 　<summary>床下類</summary>
   　電車<br> 
-  　 &nbsp;気動車
+  　 <a href="https://heyanonakakobo.github.io/DC-yukashita/">気動車</a>
     </details>
   <details>
   　<summary>屋根類</summary>
