--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
   <summary>製品情報</summary>
   <details>
 　<summary>床下類</summary>
-  　電車<br> 
+  　<a href="https://heyanonakakobo.github.io/EC-yukashita/">電車</a><br> 
   　 <a href="https://heyanonakakobo.github.io/DC-yukashita/">気動車</a>
     </details>
   <details>
