--- a/index.html
+++ b/index.html
@@ -37,6 +37,10 @@
   　<summary>屋根類</summary>
     <p>気動車</p>
   </details>
+    <details>
+    　<summary>その他</summary>
+      その他製品<br>
+    </details>
 </details>
 
 <li>製品化発表</li>
