--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
     </details>
   <details>
   　<summary>屋根類</summary>
-    <p>気動車</p>
+    <a href="https://heyanonakakobo.github.io/yaneDC/">気動車</a>
   </details>
     <details>
     　<summary>その他</summary>
