--- a/index.html
+++ b/index.html
@@ -16,7 +16,9 @@
 <br>
 <center><img src="./header.png" alt="heyanonakakobo" width="700" height="200"></div></div></center>
 
-
+<div class="ue">
+  &nbsp;&nbsp;部屋の中こうぼう(工房)公式ホームページです。
+</div>
 
 <br>
 <div class="box2">
