--- a/index.html
+++ b/index.html
@@ -67,6 +67,8 @@
 <div class="box3">
  <h2>～新製品～</h2>
   <div class="sinseihin">
+    <p>キハ200床下機器トイレタンク(気動車)</p>
+    <p>キハ47屋根上ダクト 九州タイプ(気動車)</p>
 <p>303系K03編成改造キット(電車)</p>
 <p>303系グレードアップパーツセット(電車)</p>
 <br>
@@ -76,7 +78,7 @@
 
 
 <h3>～更新履歴～</h3>
-<p>20××年×月×日 ホームページ更新</p>
+<p>2020年11月18日 見れる項目など追加</p>
 
 
 
