--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <link rel="stylesheet" href="./HP.css">
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <META NAME="keywords" content="Nゲージ、鉄道模型、部屋の中工房、部屋の中こうぼう">
+  <META NAME="keywords" content="部屋の中こうぼう">
   <title>部屋の中こうぼう</title>
   
 </head>
