--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 
   <div class="menu">
 
- 
+ <p>部屋の中工房</p>
 <p> MENU</p>
    <br>
    <div class="globalNav"><a href="https://heyanonakakobo.github.io/Top/"><li>TOP</li></a></div>
