--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 <center><img src="./header.png" alt="heyanonakakobo" width="700" height="200"></div></div></center>
 
 <div class="ue">
-  &nbsp;&nbsp;部屋の中こうぼう(工房)公式ホームページです。
+  &nbsp;&nbsp;  <h1>部屋の中こうぼう(工房)公式ホームページです。</h1>
 </div>
 
 <br>
@@ -25,7 +25,7 @@
 
   <div class="menu">
 
- <p>部屋の中工房</p>
+ <p>部屋の中こうぼう</p>
 <p> MENU</p>
    <br>
    <div class="globalNav"><a href="https://heyanonakakobo.github.io/Top/"><li>TOP</li></a></div>
