--- a/index.html
+++ b/index.html
@@ -14,10 +14,10 @@
 <div class="heddar">
 <div class="box1">
 <br>
-<center><img src="./header.png" alt="heyanonakakobo" width="700" height="200"></div></div></center>
+<center><img src="./header.png" alt="部屋の中こうぼう" width="700" height="200"></div></div></center>
 
 <div class="ue">
-  &nbsp;&nbsp;  <h1>部屋の中こうぼう(工房)公式ホームページです。</h1>
+  &nbsp;&nbsp; 部屋の中こうぼう(工房)公式ホームページです。
 </div>
 
 <br>
