--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="ja">
 <head>
   <meta name="google-site-verification" content="zIHGxe6KIxhkhxGAKMlW6M0FCaiWclupsUlABkkicOk" />
-
+　<meta name="google-site-verification" content="zIHGxe6KIxhkhxGAKMlW6M0FCaiWclupsUlABkkicOk" />
   <link rel="stylesheet" href="./HP.css">
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
