--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="ja">
 <head>
+  <meta name="google-site-verification" content="64v_Te0Mu4dCUoffighJZl2AdkiMwb3CYfrL3mII48M" />
   <meta name="google-site-verification" content="zIHGxe6KIxhkhxGAKMlW6M0FCaiWclupsUlABkkicOk" />
 　<meta name="google-site-verification" content="zIHGxe6KIxhkhxGAKMlW6M0FCaiWclupsUlABkkicOk" />
   <link rel="stylesheet" href="./HP.css">
@@ -11,7 +12,7 @@
   
 </head>
 <body>
-
+部屋の中こうぼう
 <div class="heddar">
 <div class="box1">
 <br>
