--- a/index.html
+++ b/index.html
@@ -1,6 +1,17 @@
 <!DOCTYPE html>
 <html lang="ja">
 <head>
+  
+  
+  <html lang="ja" prefix="og: http://ogp.me/ns#">
+
+<meta property="og:title" content="部屋の中こうぼう">
+<meta property="og:type" content="website">
+<meta property="og:description" content="主に九州車両のNゲージ部品を製作・販売をしております。">
+<meta property="og:url" content="https://heyanonakakobo.github.io/Top/">
+<meta property="og:site_name" content="部屋の中こうぼう">
+<meta property="og:image" content=">
+<meta name="twitter:card" content="summary_large_image">
   <meta name="google-site-verification" content="64v_Te0Mu4dCUoffighJZl2AdkiMwb3CYfrL3mII48M" />
   <meta name="google-site-verification" content="zIHGxe6KIxhkhxGAKMlW6M0FCaiWclupsUlABkkicOk" />
 　<meta name="google-site-verification" content="zIHGxe6KIxhkhxGAKMlW6M0FCaiWclupsUlABkkicOk" />
