--- a/index.html
+++ b/index.html
@@ -82,11 +82,11 @@
 
 <div class="box3">
  <h2>～新製品～</h2>
+  <p>部屋の中こうぼう</p>
+  <p>415系各種床下正規化パーツセット</p>
+  <p>特別企画品の発売</p>
   <div class="sinseihin">
-    <p>キハ200床下機器トイレタンク(気動車)</p>
-    <p>キハ47屋根上ダクト 九州タイプ(気動車)</p>
-<p>303系K03編成改造キット(電車)</p>
-<p>303系グレードアップパーツセット(電車)</p>
+
 <br>
 <p>部屋の中工房(こうぼう)2020</p>
 <br>
@@ -94,8 +94,10 @@
 <br>
 
 
-<h3>～更新履歴～</h3>
- <p>2020年12月8日 背品化発表欄の追加と製品化発表を行いました。</p>
+<h3>～更新履歴・お知らせ～</h3>
+    <p>2020年12月31日今年も1年ありがとうございました。今年から始めたばかりの販売で至らない点もございましたが来年も頑張ってまいりますので、どうかよろしくお願いいたします。(代表：なおと)</p>
+  <p>2020年12月31日 415系各種パーツの販売開始に伴って販売ページの追加を行いました。</p>
+ <p>2020年12月8日 製品発表欄の追加と製品化発表を行いました。</p>
 <p>2020年11月18日 見れる項目など追加</p>
 
 
