--- a/index.html
+++ b/index.html
@@ -88,13 +88,14 @@
   <p>415系各種床下正規化パーツセット</p>
   <p>特別企画品の発売</p>
 <br>
-<p>部屋の中工房(こうぼう)2020</p>
+<p>部屋の中工房(こうぼう)2021</p>
 <br>
 <br>
 <br>
 
 
 <h3>～更新履歴・お知らせ～</h3>
+    <p>2021年1月3日今年もよろしくお願いいたします。</p>
     <p>2020年12月31日今年も1年ありがとうございました。今年から始めたばかりの販売で至らない点もございましたが来年も頑張ってまいりますので、どうかよろしくお願いいたします。(代表：なおと)</p>
   <p>2020年12月31日 415系各種パーツの販売開始に伴って販売ページの追加を行いました。</p>
  <p>2020年12月8日 製品発表欄の追加と製品化発表を行いました。</p>
