--- a/index.html
+++ b/index.html
@@ -95,6 +95,7 @@
 
 
 <h3>～更新履歴・お知らせ～</h3>
+    <p>キハ72ゆふいんの森_いさしん・かわやま・或る列車のトイレタンク車端部機器を販売開始しました。</p>
     <p>2021年1月3日今年もよろしくお願いいたします。</p>
     <p>2020年12月31日今年も1年ありがとうございました。今年から始めたばかりの販売で至らない点もございましたが来年も頑張ってまいりますので、どうかよろしくお願いいたします。(代表：なおと)</p>
   <p>2020年12月31日 415系各種パーツの販売開始に伴って販売ページの追加を行いました。</p>
