--- a/index.html
+++ b/index.html
@@ -58,6 +58,7 @@
   　<summary>屋根類</summary>
     <a href="https://heyanonakakobo.github.io/yaneDC/">気動車</a>
   </details>
+  <a href="https://heyanonakakobo.github.io/sticker/">ステッカー類</a>
     <details>
     　<summary>その他</summary>
       その他製品<br>
