--- a/sticker.html
+++ b/sticker.html
@@ -81,19 +81,19 @@
 
     <h2>～ステッカー類～</h2>
   
-      <img src="./819s.jpg" alt="0" width="400" height="300">
+      <img src="./819s.png" alt="0" width="400" height="300">
 
   <a href="https://www.mercari.com/jp/items/m32067099596/"><li>819系 感電注意シール</li></a>    
   
   
-  <img src="./303s.jpg" alt="0" width="400" height="300">
+  <img src="./303s.png" alt="0" width="400" height="300">
 
   <a href="https://www.mercari.com/jp/items/m10791610255/"><li>303系 前面・側面行先シール</li></a>
   
   
     <br>
   
-      <img src="./415s.jpg" alt="0" width="400" height="300">
+      <img src="./415s.png" alt="0" width="400" height="300">
 
   <a href="https://www.mercari.com/jp/items/m50026106815/"><li>415系100番台 方向幕埋めステッカー</li></a>
   
@@ -117,7 +117,7 @@
 <br>
 <br>
 
-   <img src="./s.jpg" alt="0" height="400" width="300">
+   <img src="./s.png" alt="0" height="400" width="300">
    <a href="https://www.mercari.com/jp/items/m75850288790/"><li>817系3000番台・813系1100番台前面・側面ステッカー</li></a>
 
 
