--- a/yaneDC.html
+++ b/yaneDC.html
@@ -76,7 +76,7 @@
       <a href="https://heyanonakakobo.github.io/Top/"><li>Top</li></a>
 
 
-<img src="./47.jpg" alt="200" width="300" height="200" > 
+<img src="./47d.jpeg" alt="200" width="300" height="200" > 
 <a href="https://www.mercari.com/jp/mypage/items/m82566352647/"><li>キハ47屋根上ダクト</li></a>
 
 </div>
