--- a/DC-yukashita.html
+++ b/DC-yukashita.html
@@ -28,23 +28,23 @@
      <div class="globalNav"><a href="https://heyanonakakobo.github.io/Top/"><li>TOP</li></a></div>
   <li>概要</li>
   
+<details>
+  <summary>製品情報</summary>
   <details>
-    <summary>製品情報</summary>
-    <details>
-  　<summary>床下類</summary>
-    　<a href="https://heyanonakakobo.github.io/EC-yukashita/">電車</a><br> 
-    　 <a href="https://heyanonakakobo.github.io/DC-yukashita/">気動車</a>
-      </details>
-    <details>
-    　<summary>屋根類</summary>
-      <a href="https://heyanonakakobo.github.io/yaneDC/">気動車</a>
+　<summary>床下類</summary>
+  　<a href="https://heyanonakakobo.github.io/Top/EC-yukashita.html">電車</a><br> 
+  　 <a href="https://heyanonakakobo.github.io/Top/DC-yukashita.html">気動車</a>
     </details>
-    <a href="https://heyanonakakobo.github.io/sticker/">ステッカー類</a>
-      <details>
-      　<summary>その他</summary>
-        <a href="https://heyanonakakobo.github.io/Other/">その他の製品</a>
-      </details>
+  <details>
+  　<summary>屋根類</summary>
+    <a href="https://heyanonakakobo.github.io/Top/yaneDC.html">気動車</a>
   </details>
+  <a href="https://heyanonakakobo.github.io/Top/sticker.html">ステッカー類</a>
+    <details>
+    　<summary>その他</summary>
+           <a href="https://heyanonakakobo.github.io/Top/Other.html">その他の製品</a>
+    </details>
+</details>
  
   <a href="https://heyanonakakobo.github.io/Seihinka/"><li>製品化発表</li></a>
       <li><a href="https://heyanonakakobo.github.io/BVE-TrainSim/">BVE-TrainSim</a></li>
