--- a/yaneDC.html
+++ b/yaneDC.html
@@ -33,18 +33,17 @@
   <summary>製品情報</summary>
   <details>
 　<summary>床下類</summary>
-  　<a href="https://heyanonakakobo.github.io/EC-yukashita/">電車</a><br> 
-  　 <a href="https://heyanonakakobo.github.io/DC-yukashita/">気動車</a>
+  　<a href="https://heyanonakakobo.github.io/Top/EC-yukashita.html">電車</a><br> 
+  　 <a href="https://heyanonakakobo.github.io/Top/DC-yukashita.html">気動車</a>
     </details>
   <details>
   　<summary>屋根類</summary>
-    <a href="https://heyanonakakobo.github.io/yaneDC/">気動車</a>
+    <a href="https://heyanonakakobo.github.io/Top/yaneDC.html">気動車</a>
   </details>
-  <a href="https://heyanonakakobo.github.io/sticker/">ステッカー類</a>
+  <a href="https://heyanonakakobo.github.io/Top/sticker.html">ステッカー類</a>
     <details>
-    　   　<summary>その他</summary>
-        <a href="https://heyanonakakobo.github.io/Other/">その他の製品</a>
-      その他製品<br>
+    　<summary>その他</summary>
+           <a href="https://heyanonakakobo.github.io/Top/Other.html">その他の製品</a>
     </details>
 </details>
 
