--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
     </details>
   <details>
   　<summary>屋根類</summary>
-    <a href="https://heyanonakakobo.github.io/yaneDC/">気動車</a>
+    <a href="https://heyanonakakobo.github.io/Top/yaneDC.html">気動車</a>
   </details>
   <a href="https://heyanonakakobo.github.io/Top/sticker.html">ステッカー類</a>
     <details>
