--- a/EC-yukashita.html
+++ b/EC-yukashita.html
@@ -37,7 +37,7 @@ MENU
   　<summary>屋根類</summary>
     <a href="https://heyanonakakobo.github.io/Top/yaneDC.html">気動車</a>
   </details>
-  <a href="https://heyanonakakobo.github.io/Top/sticker.html">ステッカー類</a>
+  <a href="https://heyanonakakobo.github.io/Top/sticker.html">ステッカー・デカール</a>
     <details>
     　<summary>その他</summary>
            <a href="https://heyanonakakobo.github.io/Top/Other.html">その他の製品</a>
