--- a/sticker.html
+++ b/sticker.html
@@ -79,7 +79,7 @@
 <div class="box3">
 
 
-    <h2>～ステッカー類～</h2>
+    <h2>～ステッカー・デカール関連～</h2>
   
       <img src="./819s.png" alt="0" width="400" height="300">
 
