--- a/sticker.html
+++ b/sticker.html
@@ -81,6 +81,15 @@
 
     <h2>～ステッカー・デカール関連～</h2>
   
+        <img src="./783ze.jpg" alt="0" width="400" height="300">
+
+  <a href="https://www.mercari.com/jp/items/m19108268047/"><li>783系前面編成番号デカールセット</li></a>    
+  
+          <img src="./783kensa.jpg" alt="0" width="400" height="300">
+
+  <a href="https://www.mercari.com/jp/items/m77394306949/"><li>783系妻面検査票デカールセット</li></a>    
+  
+  
       <img src="./819s.png" alt="0" width="400" height="300">
 
   <a href="https://www.mercari.com/jp/items/m32067099596/"><li>819系 感電注意シール</li></a>    
