--- a/index.html
+++ b/index.html
@@ -96,6 +96,9 @@
 
 
 <h3>～更新履歴・お知らせ～</h3>
+    <p>なんだろう、更新頻度低いのやめてもらっていいですか？(ブーメラン）</p>
+    <p>783系スカート発売</p>
+    <p>新商品の発売。（811系トイレタンク）</p>
     <p>ん～となんかいろいろ商品追加しました(2021年3月更新)</p>
     <p>キハ72ゆふいんの森_いさしん・かわやま・或る列車のトイレタンク車端部機器を販売開始しました。</p>
     <p>2021年1月3日今年もよろしくお願いいたします。</p>
