--- a/Other.html
+++ b/Other.html
@@ -81,11 +81,10 @@ MENU
    <a href="https://www.mercari.com/jp/items/m75783650843/"><li>UT13Cコンテナ2個セット</li></a>
          
    <img src="./3033.jpg" alt="303系改造キット ">
-<nav class="globalNav"><a href="https://www.mercari.com/jp/items/m68970566711/"><h3><li>303系K03編成 改造キット</li></h3></a></nav>
+<nav class="globalNav"><a href="hhttps://www.mercari.com/jp/items/m82145720671/"><h3><li>303系K03編成 改造キット</li></h3></a></nav>
 <br>
 <br>
-<img src="./47.jpg" alt="47">
-<nav class="globalNav"><a href="https://www.mercari.com/jp/items/m82566352647/"><h3><li>キハ47　屋根上ダクト　(九州タイプ)</li><h3></a></nav>
+
 <nav class="globalNav"><a href="https://karatsukko.github.io/HEYANONAKAKOBO/">戻る</a></nav>      
                      
    <br>
