--- a/index.html
+++ b/index.html
@@ -96,6 +96,7 @@
 
 
 <h3>～更新履歴・お知らせ～</h3>
+    <p>西の私鉄の部品追加（）2021年7月1日</p>
     <p>なんだろう、更新頻度低いのやめてもらっていいですか？(ブーメラン）</p>
     <p>783系スカート発売</p>
     <p>新商品の発売。（811系トイレタンク）</p>
