--- a/sticker.html
+++ b/sticker.html
@@ -81,6 +81,15 @@
 
     <h2>～ステッカー・デカール関連～</h2>
   
+    
+        <img src="./6050.jpg" alt="0" width="400" height="300">
+
+  <a href="https://www.mercari.com/jp/items/m63160749253/"><li>西鉄優先席ステッカー</li></a>   
+  
+  
+  
+  
+  
         <img src="./783ze.jpg" alt="0" width="400" height="300">
 
   <a href="https://www.mercari.com/jp/items/m27378063308/"><li>783系前面編成番号デカールセット</li></a>    
