--- a/sticker.html
+++ b/sticker.html
@@ -81,7 +81,12 @@
 
     <h2>～ステッカー・デカール関連～</h2>
   
-    
+          <img src="./787-2.jpg" alt="0" width="400" height="300">
+
+  <a href="https://jp.mercari.com/item/m83717982570"><li>787系LED行先方向幕シールセット</li></a>    
+  
+  
+  
         <img src="./6050.jpg" alt="0" width="400" height="300">
 
   <a href="https://www.mercari.com/jp/items/m49834201463/"><li>西鉄優先席ステッカー</li></a>   
